--- a/gear.html
+++ b/gear.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <a href="PATH TO INDEX WEB PAGE HERE"><img src="PATH TO LOGO" width="200"></a>
+  <a href="index.html"><img src="images/logo-climbing.jpg" alt="Logo Image" width="200"></a>
   <h1>Rock Climbing Info</h1>
 
   <h2>Climbing Gear</h2>
