--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <h1>Rock Climbing Info</h1>
 
   <h2>What is Rock Climbing?</h2>
-  <a href="PATH TO MAN PAGE"><img src="PATH TO MAN ON WALL IMAGE" width="200"></a>
+  <a href="PATH TO MAN PAGE"><img src="images/climbing/man-on-wall.jpg" alt="man rock climbing on a wall" width="200"></a>
   <p><a href="LINK TO ROCK CLIMBING WEBSITE">Rock climbing</a> is an activity in which participants climb up, down or across natural rock formations or artificial rock walls.</p>
 
   <h2>What does climbing gear do?</h2>
-  <a href="PATH TO GEAR PAGE"><img src="PATH TO GEAR PHOTO" width="200"></a>
+  <a href="PATH TO GEAR PAGE"><img src="images/climbing/gear.jpg" alt="climbing gear" width="200"></a>
   <p><a href="LINK TO QUICKDRAW WEBSITE">Quickdraws</a> (often referred to as "draws") are used by climbers to connect ropes to bolt anchors, or to other traditional protection, allowing the rope to move through the anchoring system with minimal friction.</p>
 
   <h2>Why use chalk?</h2>
-  <a href="PATH TO CHALK PAGE"><img src="PATH TO CHALK PHOTO" width="200"></a>
+  <a href="PATH TO CHALK PAGE"><img src="images/climbing/chalked-hands.jpg" alt="chalk on some hands" width="200"></a>
 </p><a href="LINK TO CHALK WEBSITE">Chalk</a> is used by nearly all climbers to absorb problematic moisture, often sweat, on the hands.</p>
 
 </body>
